--- a/sprint/24/publish-a-dataset/index.html
+++ b/sprint/24/publish-a-dataset/index.html
@@ -13,18 +13,20 @@ footer: false
   <div class="wrapper margin-top--6">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <a class="back-link" href="#">Collections</a>
+        <a class="back-link" href="#">Back</a>
         <h1 class="roboto">Add dataset to collection</h1>
-      </div>
-    </div>
-  </div>
 
-  <div class="wrapper">
-    <div class="col-wrap">
-      <div class="col col--md-two-thirds col--lg-two-thirds background--gallery padding-top--1 padding-right--1 padding-left--1 border-left--matisse">
-        <h2 class="heading-small">What is this page?</h2>
-        <p class="margin-bottom--2">A list of datasets that can be added to this collection.</p>
-        <p class="margin-bottom--3"><a href="#">Dismiss</a></p>
+        <details role="group" class="margin-top--4">
+          <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">What is this page?</span>
+          </summary>
+          <div class="panel" id="details-content-0" aria-hidden="true">
+            <ul class="margin-bottom--0">
+              <li>A list of datasets that can be added to this collection</li>
+              <li>Select one to update and preview it</li>
+            </ul>
+          </div>
+        </details>
+
       </div>
     </div>
   </div>
