--- a/sprint/24/publish-a-dataset/dataset-download-information.html
+++ b/sprint/24/publish-a-dataset/dataset-download-information.html
@@ -37,7 +37,7 @@ footer: false
   <div class="wrapper padding-top--2 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="margin-bottom--3 font-weight--bold">Alert</p>
+        <p class="margin-bottom--3 font-weight--bold">Usage note</p>
       </div>
       <div class="col col--md-half col--lg-half">
         <p class="margin-bottom--3">
@@ -46,7 +46,7 @@ footer: false
         </p>
       </div>
       <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="align-md--right margin-bottom--3"><a href="#">Edit</a></p>
+        <p class="align-md--right margin-bottom--3"><a class="padding-right--1" href="#">Edit</a> <a href="#">Delete</a></p>
       </div>
     </div>
   </div>
@@ -58,7 +58,7 @@ footer: false
   <div class="wrapper padding-top--2 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <p class="margin-bottom--3"><a href="#">Add alert, correction or change summary</a></p>
+        <p class="margin-bottom--3"><a href="#">Add usage note</a></p>
       </div>
     </div>
   </div>
@@ -66,10 +66,10 @@ footer: false
   <div class="wrapper padding-top--6 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-          <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1">
+          <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1" href="preview">
             Save and continue
           </a>
-          <a class="font-xsmall" href="#">Cancel</a>
+          <!-- <a class="font-xsmall" href="#">Cancel</a> -->
       </div>
     </div>
   </div>
