--- a/sprint/24/publish-a-dataset/dataset-version-information.html
+++ b/sprint/24/publish-a-dataset/dataset-version-information.html
@@ -15,7 +15,7 @@ footer: false
       <div class="col col--md-one col--lg-one">
         <a class="back-link" href="dataset-overview">Back</a>
         <p class="padding-top--3 margin-bottom--0">Step 2 of 4</p>
-        <h1 class="roboto padding-top--0">Dataset version information</h1>
+        <h1 class="roboto padding-top--0">Update release information</h1>
         <!-- <p>Title: Consumer Prices Index including owner occupiers' housing costs (CPIH)</p> -->
 
         <details role="group" class="margin-top--4">
@@ -24,7 +24,7 @@ footer: false
           <div class="panel" id="details-content-0" aria-hidden="true">
             <ul class="margin-bottom--0">
               <li>This page contains specific information for this release</li>
-              <li>Editing it will only affect this version</li>
+              <li>Editing it will only affect this release</li>
             </ul>
           </div>
         </details>
@@ -116,7 +116,7 @@ footer: false
         </p>
       </div>
       <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="align-md--right margin-bottom--3"><a href="#">Edit</a></p>
+        <p class="align-md--right margin-bottom--3"><a class="padding-right--1" href="#">Edit</a> <a href="#">Delete</a></p>
       </div>
     </div>
   </div>
@@ -136,7 +136,7 @@ footer: false
       </p>
       </div>
       <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="align-md--right margin-bottom--3"><a href="#">Edit</a></p>
+        <p class="align-md--right margin-bottom--3"><a class="padding-right--1" href="#">Edit</a> <a href="#">Delete</a></p>
       </div>
     </div>
   </div>
@@ -156,7 +156,7 @@ footer: false
         </p>
       </div>
       <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="align-md--right margin-bottom--3"><a href="#">Edit</a></p>
+        <p class="align-md--right margin-bottom--3"><a class="padding-right--1" href="#">Edit</a> <a href="#">Delete</a></p>
       </div>
     </div>
   </div>
@@ -245,7 +245,7 @@ footer: false
           <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1" href="dataset-download-information">
             Save and continue
           </a>
-          <a class="font-xsmall" href="#">Cancel</a>
+          <!-- <a class="font-xsmall" href="#">Cancel</a> -->
       </div>
     </div>
   </div>
