--- a/sprint/24/publish-a-dataset/dataset-overview.html
+++ b/sprint/24/publish-a-dataset/dataset-overview.html
@@ -15,7 +15,7 @@ footer: false
       <div class="col col--md-one col--lg-one">
         <a class="back-link" href="index">Back</a>
         <p class="padding-top--3 margin-bottom--0">Step 1 of 4</p>
-        <h1 class="roboto padding-top--0">Dataset overview</h1>
+        <h1 class="roboto padding-top--0">Check dataset information</h1>
 
         <details role="group" class="margin-top--4">
           <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">What is this page?</span>
@@ -23,7 +23,7 @@ footer: false
           <div class="panel" id="details-content-0" aria-hidden="true">
             <ul class="margin-bottom--0">
               <li>This page contains key information about the dataset</li>
-              <li>Editing it will affect all previous versions</li>
+              <li>Editing it will affect all previous releases</li>
               <li>It’s unlikely to change from release to release</li>
             </ul>
           </div>
@@ -306,7 +306,7 @@ footer: false
           <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1" href="dataset-version-information">
             Save and continue
           </a>
-          <a class="font-xsmall" href="#">Cancel</a>
+          <!-- <a class="font-xsmall" href="#">Cancel</a> -->
       </div>
     </div>
   </div>
