--- a/sprint/24/publish-a-dataset/index.html
+++ b/sprint/24/publish-a-dataset/index.html
@@ -36,13 +36,20 @@ footer: false
   </div>
 
 
-  <div class="wrapper padding-top--2 padding-bottom--0">
+  <div class="wrapper padding-top--1 padding-bottom--0">
     <div class="col-wrap">
-      <div class="col col--md-three-quarters col--lg-three-quarters">
-        <p class="margin-bottom--3"><a href="dataset-overview">Consumer Prices Index including owner occupiers' housing costs (CPIH)</a></p>
-      </div>
-      <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="align-md--right margin-bottom--3"><a href="#">Show history</a></p>
+      <div class="col col--md-one col--lg-one padding-bottom--3">
+        <p class="heading-medium margin-bottom--2"><a href="dataset-overview">Consumer Prices Index including owner occupiers' housing costs (CPIH)</a></p>
+        <details role="group">
+          <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Show version history</span>
+          </summary>
+          <div class="panel" id="details-content-0" aria-hidden="true">
+            <ul class="margin-bottom--0">
+              <li>A list of datasets that can be added to this collection</li>
+              <li>Select one to update and preview it</li>
+            </ul>
+          </div>
+        </details>
       </div>
     </div>
   </div>
@@ -51,13 +58,21 @@ footer: false
     <hr>
   </div>
 
-  <div class="wrapper padding-top--2 padding-bottom--0">
+  <div class="wrapper padding-top--1 padding-bottom--0">
     <div class="col-wrap">
-      <div class="col col--md-three-quarters col--lg-three-quarters">
-        <p class="margin-bottom--3"><a href="#">Annual Summary of Hours Worked, Place of Work by Local Authority </a></p>
-      </div>
-      <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="align-md--right margin-bottom--3"><a href="#">Show history</a></p>
+      <div class="col col--md-one col--lg-one padding-bottom--3">
+        <p class="heading-medium margin-bottom--2"><a href="dataset-overview">Annual Summary of Hours Worked, Place of Work by Local Authority</a></p>
+        <p>Version: 1 <span class="font-color--iron">|</span> Last modified: 03/05/18 11:44 <span class="font-color--iron">|</span></p>
+        <details role="group">
+          <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Show version history</span>
+          </summary>
+          <div class="panel" id="details-content-0" aria-hidden="true">
+            <ul class="margin-bottom--0">
+              <li>A list of datasets that can be added to this collection</li>
+              <li>Select one to update and preview it</li>
+            </ul>
+          </div>
+        </details>
       </div>
     </div>
   </div>
@@ -66,13 +81,20 @@ footer: false
     <hr>
   </div>
 
-  <div class="wrapper padding-top--2 padding-bottom--0">
+  <div class="wrapper padding-top--1 padding-bottom--0">
     <div class="col-wrap">
-      <div class="col col--md-three-quarters col--lg-three-quarters">
-        <p class="margin-bottom--3"><a href="#">Population estimates for UK, England and Wales, Scotland and Northern Ireland</a></p>
-      </div>
-      <div class="col col--md-one-quarter col--lg-one-quarter">
-        <p class="align-md--right margin-bottom--3"><a href="#">Show history</a></p>
+      <div class="col col--md-one col--lg-one padding-bottom--3">
+        <p class="heading-medium margin-bottom--2"><a href="dataset-overview">Population estimates for UK, England and Wales, Scotland and Northern Ireland</a></p>
+        <details role="group">
+          <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Show version history</span>
+          </summary>
+          <div class="panel" id="details-content-0" aria-hidden="true">
+            <ul class="margin-bottom--0">
+              <li>A list of datasets that can be added to this collection</li>
+              <li>Select one to update and preview it</li>
+            </ul>
+          </div>
+        </details>
       </div>
     </div>
   </div>
