--- a/sprint/24/publish-a-dataset/index.html
+++ b/sprint/24/publish-a-dataset/index.html
@@ -14,9 +14,9 @@ footer: false
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
         <a class="back-link" href="#">Back</a>
-        <h1 class="roboto">Add dataset to collection</h1>
+        <h1 class="roboto">Select a dataset</h1>
 
-        <details role="group" class="margin-top--4">
+        <!-- <details role="group" class="margin-top--4">
           <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">What is this page?</span>
           </summary>
           <div class="panel" id="details-content-0" aria-hidden="true">
@@ -25,13 +25,13 @@ footer: false
               <li>Select one to update and preview it</li>
             </ul>
           </div>
-        </details>
+        </details> -->
 
       </div>
     </div>
   </div>
 
-  <div class="wrapper margin-top--6">
+  <div class="wrapper margin-top--3">
     <hr>
   </div>
 
@@ -39,17 +39,8 @@ footer: false
   <div class="wrapper padding-top--1 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one padding-bottom--3">
-        <p class="heading-medium margin-bottom--2"><a href="dataset-overview">Consumer Prices Index including owner occupiers' housing costs (CPIH)</a></p>
-        <details role="group">
-          <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Show version history</span>
-          </summary>
-          <div class="panel" id="details-content-0" aria-hidden="true">
-            <ul class="margin-bottom--0">
-              <li>A list of datasets that can be added to this collection</li>
-              <li>Select one to update and preview it</li>
-            </ul>
-          </div>
-        </details>
+        <p class="heading-medium margin-bottom--1"><a href="task">Consumer Prices Index including owner occupiers' housing costs (CPIH)</a></p>
+        <p class="margin-bottom--1">Updated today at 8:44am</p>
       </div>
     </div>
   </div>
@@ -62,17 +53,7 @@ footer: false
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one padding-bottom--3">
         <p class="heading-medium margin-bottom--2"><a href="dataset-overview">Annual Summary of Hours Worked, Place of Work by Local Authority</a></p>
-        <p>Version: 1 <span class="font-color--iron">|</span> Last modified: 03/05/18 11:44 <span class="font-color--iron">|</span></p>
-        <details role="group">
-          <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Show version history</span>
-          </summary>
-          <div class="panel" id="details-content-0" aria-hidden="true">
-            <ul class="margin-bottom--0">
-              <li>A list of datasets that can be added to this collection</li>
-              <li>Select one to update and preview it</li>
-            </ul>
-          </div>
-        </details>
+        <p class="margin-bottom--1">Updated yesterday at 3:15pm</p>
       </div>
     </div>
   </div>
@@ -85,16 +66,7 @@ footer: false
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one padding-bottom--3">
         <p class="heading-medium margin-bottom--2"><a href="dataset-overview">Population estimates for UK, England and Wales, Scotland and Northern Ireland</a></p>
-        <details role="group">
-          <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Show version history</span>
-          </summary>
-          <div class="panel" id="details-content-0" aria-hidden="true">
-            <ul class="margin-bottom--0">
-              <li>A list of datasets that can be added to this collection</li>
-              <li>Select one to update and preview it</li>
-            </ul>
-          </div>
-        </details>
+        <p class="margin-bottom--1">Updated 16 May 2018 at 5:45pm</p>
       </div>
     </div>
   </div>
