--- a/sprint/24/publish-a-dataset/key-metadata.html
+++ b/sprint/24/publish-a-dataset/key-metadata.html
@@ -1,69 +1,20 @@
-<!-- Copy of ONS.GOV.UK with extra prototype styles included -->
+---
+layout: prototype
+warning: false
+search: false
+primary-nav: false
+secondary-nav: false
+language-switch: false
+footer: false
+---
 
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Digital Publishing Prototype Kit</title>
-  <meta name="description" content="Use this to make ONS website prototypes.">
-  <link rel="stylesheet" type="text/css" href="https://cdn.ons.gov.uk/sixteens/655b62a/css/main.css">
-  <link rel="stylesheet" href="/dp-prototype-kit/assets/main.css">
-  <link rel="canonical" href="http://localhost:4000/dp-prototype-kit/sprint/24/publish-a-dataset/dataset-overview.html">
-  <link rel="alternate" type="application/rss+xml" title="Digital Publishing Prototype Kit" href="/dp-prototype-kit/feed.xml">
-  <link rel="shortcut icon" href="/dp-prototype-kit/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-
-  <meta name="robots" content="noindex, nofollow">
-
-</head>
-
-
-  <body>
-
-    
-
-    <header class="border-bottom--iron-sm border-bottom--iron-md">
-	<a class="skiplink" href="#main" tabindex="0">
-		Skip to main content
-	</a>
-
-	<div class="wrapper">
-		<div class="header col-wrap">
-
-			<div class="col col--lg-one-third col--md-one-third">
-  <a href="/dp-prototype-kit/">
-    <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg" alt="Office for National Statistics">
-  </a>
-</div>
-
-
-			
-
-			
-
-		</div>
-	</div>
-
-	
-
-
-	
-
-</header>
-
-
-    <div class="prototype florence margin-bottom--3">
+<div class="prototype florence margin-bottom--3">
 
   <div class="wrapper margin-top--6">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <a class="back-link" href="index">Back</a>
-        <p class="padding-top--3 margin-bottom--0">Step 1 of 4</p>
-        <h1 class="roboto padding-top--0">Check dataset information</h1>
+        <a class="back-link" href="task">Back</a>
+        <h1 class="roboto padding-top--0">Change key metadata</h1>
 
         <details role="group" class="margin-top--4">
           <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">What is this page?</span>
@@ -71,8 +22,7 @@
           <div class="panel" id="details-content-0" aria-hidden="true">
             <ul class="margin-bottom--0">
               <li>This page contains key information about the dataset</li>
-              <li>Editing it will affect all previous releases</li>
-              <li>It’s unlikely to change from release to release</li>
+              <li>Editing this page will affect all previous releases</li>
             </ul>
           </div>
         </details>
@@ -277,7 +227,7 @@
   <div class="wrapper padding-top--6 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <h2 class="roboto">Related content</h2>
+        <h2 class="roboto">Related links</h2>
       </div>
     </div>
   </div>
@@ -343,7 +293,7 @@
   <div class="wrapper padding-top--2 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <p class="margin-bottom--3"><a href="#">Add related content</a></p>
+        <p class="margin-bottom--3"><a href="#">Add another related link</a></p>
       </div>
     </div>
   </div>
@@ -351,7 +301,7 @@
   <div class="wrapper padding-top--6 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-          <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1" href="dataset-version-information">
+          <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1" href="preview">
             Save and continue
           </a>
           <!-- <a class="font-xsmall" href="#">Cancel</a> -->
@@ -360,15 +310,3 @@
   </div>
 
 </div>
-
-
-    
-
-  </body>
-
-  <!--[if gt IE 8]><!-->
-  <script type="text/javascript" src="https://cdn.ons.gov.uk/sixteens/1f31a7c/js/main.js"></script>
-  <script type="text/javascript" src="https://beta.ons.gov.uk/js/app.js"></script>
-  <!--<![endif]-->
-
-</html>
