--- a/sprint/24/publish-a-dataset/release-metadata.html
+++ b/sprint/24/publish-a-dataset/release-metadata.html
@@ -13,9 +13,8 @@ footer: false
   <div class="wrapper margin-top--6">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <a class="back-link" href="dataset-overview">Back</a>
-        <p class="padding-top--3 margin-bottom--0">Step 2 of 4</p>
-        <h1 class="roboto padding-top--0">Update release information</h1>
+        <a class="back-link" href="select-new-edition">Back</a>
+        <h1 class="roboto padding-top--0">Update release metadata</h1>
         <!-- <p>Title: Consumer Prices Index including owner occupiers' housing costs (CPIH)</p> -->
 
         <details role="group" class="margin-top--4">
