--- a/sprint/24/publish-a-dataset/key-metadata.html
+++ b/sprint/24/publish-a-dataset/key-metadata.html
@@ -15,6 +15,8 @@ footer: false
       <div class="col col--md-one col--lg-one">
         <a class="back-link" href="task">Back</a>
         <h1 class="roboto padding-top--0">Change key metadata</h1>
+        <p>Dataset: Consumer Prices Index including owner occupiers' housing costs (CPIH)</p>
+
 
         <details role="group" class="margin-top--4">
           <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">What is this page?</span>
@@ -22,7 +24,7 @@ footer: false
           <div class="panel" id="details-content-0" aria-hidden="true">
             <ul class="margin-bottom--0">
               <li>This page contains key information about the dataset</li>
-              <li>Editing this page will affect all previous releases</li>
+              <li>Editing this metadata will affect all releases of this data</li>
             </ul>
           </div>
         </details>
