--- a/sprint/24/publish-a-dataset/old-edition-metadata.html
+++ b/sprint/24/publish-a-dataset/old-edition-metadata.html
@@ -1,77 +1,29 @@
-<!-- Copy of ONS.GOV.UK with extra prototype styles included -->
+---
+layout: prototype
+warning: false
+search: false
+primary-nav: false
+secondary-nav: false
+language-switch: false
+footer: false
+---
 
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Digital Publishing Prototype Kit</title>
-  <meta name="description" content="Use this to make ONS website prototypes.">
-  <link rel="stylesheet" type="text/css" href="https://cdn.ons.gov.uk/sixteens/655b62a/css/main.css">
-  <link rel="stylesheet" href="/dp-prototype-kit/assets/main.css">
-  <link rel="canonical" href="http://localhost:4000/dp-prototype-kit/sprint/24/publish-a-dataset/release-metadata.html">
-  <link rel="alternate" type="application/rss+xml" title="Digital Publishing Prototype Kit" href="/dp-prototype-kit/feed.xml">
-  <link rel="shortcut icon" href="/dp-prototype-kit/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-
-  <meta name="robots" content="noindex, nofollow">
-
-</head>
-
-
-  <body>
-
-    
-
-    <header class="border-bottom--iron-sm border-bottom--iron-md">
-	<a class="skiplink" href="#main" tabindex="0">
-		Skip to main content
-	</a>
-
-	<div class="wrapper">
-		<div class="header col-wrap">
-
-			<div class="col col--lg-one-third col--md-one-third">
-  <a href="/dp-prototype-kit/">
-    <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg" alt="Office for National Statistics">
-  </a>
-</div>
-
-
-			
-
-			
-
-		</div>
-	</div>
-
-	
-
-
-	
-
-</header>
-
-
-    <div class="prototype florence margin-bottom--3">
+<div class="prototype florence margin-bottom--3">
 
   <div class="wrapper margin-top--6">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
         <a class="back-link" href="select-new-edition">Back</a>
-        <h1 class="roboto padding-top--0">Update release metadata</h1>
-        <!-- <p>Title: Consumer Prices Index including owner occupiers' housing costs (CPIH)</p> -->
+        <h1 class="roboto">Old edition metadata</h1>
+        <p>Dataset: Consumer Prices Index including owner occupiers' housing costs (CPIH)</p>
 
         <details role="group" class="margin-top--4">
           <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">What is this page?</span>
           </summary>
           <div class="panel" id="details-content-0" aria-hidden="true">
             <ul class="margin-bottom--0">
-              <li>This page contains specific information for this release</li>
-              <li>Editing it will only affect this release</li>
+              <li>This page contains specific metadata for this edition</li>
+              <li>Changing it will only affect this edition</li>
             </ul>
           </div>
         </details>
@@ -91,7 +43,7 @@
         <p class="margin-bottom--3 font-weight--bold">Edition</p>
       </div>
       <div class="col col--md-half col--lg-half">
-        <p class="margin-bottom--3">Time series</p>
+        <p class="margin-bottom--3">May 2018</p>
       </div>
       <div class="col col--md-one-quarter col--lg-one-quarter">
         <p class="align-md--right margin-bottom--3"><a href="#">Edit</a></p>
@@ -109,7 +61,7 @@
         <p class="margin-bottom--3 font-weight--bold">Release date</p>
       </div>
       <div class="col col--md-half col--lg-half">
-        <p class="margin-bottom--3">18 April 2018</p>
+        <p class="margin-bottom--3">15 May 2018</p>
       </div>
       <div class="col col--md-one-quarter col--lg-one-quarter">
         <p class="align-md--right margin-bottom--3"><a href="#">Edit</a></p>
@@ -127,7 +79,7 @@
         <p class="margin-bottom--3 font-weight--bold">Next release date</p>
       </div>
       <div class="col col--md-half col--lg-half">
-        <p class="margin-bottom--3">18 June 2018</p>
+        <p class="margin-bottom--3">15 June 2018</p>
       </div>
       <div class="col col--md-one-quarter col--lg-one-quarter">
         <p class="align-md--right margin-bottom--3"><a href="#">Edit</a></p>
@@ -142,7 +94,7 @@
   <div class="wrapper padding-top--6 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <h2 class="roboto">What’s changed in this release?</h2>
+        <h2 class="roboto">Notices</h2>
       </div>
     </div>
   </div>
@@ -215,7 +167,7 @@
   <div class="wrapper padding-top--2 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-        <p class="margin-bottom--3"><a href="#">Add alert, correction or change summary</a></p>
+        <p class="margin-bottom--3"><a href="#">Add another notice</a></p>
       </div>
     </div>
   </div>
@@ -289,24 +241,11 @@
   <div class="wrapper padding-top--6 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
-          <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1" href="dataset-download-information">
+          <a class="btn btn--primary btn--thick link--no-underline font-weight--bold margin-right--1" href="preview">
             Save and continue
           </a>
-          <!-- <a class="font-xsmall" href="#">Cancel</a> -->
       </div>
     </div>
   </div>
 
 </div>
-
-
-    
-
-  </body>
-
-  <!--[if gt IE 8]><!-->
-  <script type="text/javascript" src="https://cdn.ons.gov.uk/sixteens/1f31a7c/js/main.js"></script>
-  <script type="text/javascript" src="https://beta.ons.gov.uk/js/app.js"></script>
-  <!--<![endif]-->
-
-</html>
