--- a/sprint/24/publish-a-dataset/select-old-edition.html
+++ b/sprint/24/publish-a-dataset/select-old-edition.html
@@ -14,15 +14,14 @@ footer: false
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one">
         <a class="back-link" href="task">Back</a>
-        <h1 class="roboto">Select edition</h1>
+        <h1 class="roboto">Select old edition</h1>
         <p>Dataset: Consumer Prices Index including owner occupiers' housing costs (CPIH)</p>
         <details role="group" class="margin-top--4">
           <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">What is this page?</span>
           </summary>
           <div class="panel" id="details-content-0" aria-hidden="true">
             <ul class="margin-bottom--0">
-              <li>A list of editions that are ready to be released</li>
-              <li>Select one to check and update the metadata</li>
+              <li>A list of previously released editions</li>
             </ul>
           </div>
         </details>
@@ -37,8 +36,8 @@ footer: false
   <div class="wrapper padding-top--1 padding-bottom--0">
     <div class="col-wrap">
       <div class="col col--md-one col--lg-one padding-bottom--3">
-        <p class="heading-medium margin-bottom--1"><a href="new-edition-metadata">June 2018 edition</a></p>
-        <p class="margin-bottom--1">Never released <span class="font-color--iron">|</span> Updated today at 8:44am</p>
+        <p class="heading-medium margin-bottom--1"><a href="old-edition-metadata">May 2018 edition</a></p>
+        <p class="margin-bottom--1">Released on 16 May 2018</p>
       </div>
     </div>
   </div>
@@ -46,5 +45,34 @@ footer: false
   <div class="wrapper">
     <hr>
   </div>
+
+  <div class="wrapper padding-top--1 padding-bottom--0">
+    <div class="col-wrap">
+      <div class="col col--md-one col--lg-one padding-bottom--3">
+        <p class="heading-medium margin-bottom--1"><a href="old-edition-metadata">April 2018 edition</a></p>
+        <p class="margin-bottom--1">Released on 15 April 2018</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <hr>
+  </div>
+
+  <div class="wrapper padding-top--1 padding-bottom--0">
+    <div class="col-wrap">
+      <div class="col col--md-one col--lg-one padding-bottom--3">
+        <p class="heading-medium margin-bottom--1"><a href="old-edition-metadata">March 2018 edition</a></p>
+        <p class="margin-bottom--1">Released on 17 March 2018</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <hr>
+  </div>
+
+  <br />
+  <br />
 
 </div>
