Link to bulletin

--- a/prototypes.html
+++ b/prototypes.html
@@ -12,10 +12,17 @@ footer: false
   <div class="col-wrap">
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
+
       <h2>Sprint 24</h2>
       <ul>
         <li><a href="sprint/24/publish-a-dataset">Publish a dataset in Florence</a></li>
       </ul>
+
+      <h2>Sprint 25</h2>
+      <ul>
+        <li><a href="sprint/25/bulletin">Bulletin (iteration 3)</a></li>
+      </ul>
+
     </div>
   </div>
 </div>
