--- a/prototypes.html
+++ b/prototypes.html
@@ -22,6 +22,8 @@ footer: false
       <ul>
         <li><a href="sprint/25/bulletin">Bulletin (iteration 3)</a></li>
         <li><a href="sprint/25/crime-overview">Bulletin: Crime overview (iteration 4)</a></li>
+        <li><a href="sprint/25/homicide">Bulletin: Homicide (iteration 4)</a></li>
+        <li><a href="sprint/25/offences-involving-weapons">Bulletin: Offences involving weapons (iteration 4)</a></li>
       </ul>
 
     </div>
