--- a/sprint/25/offences-involving-weapons/index.html
+++ b/sprint/25/offences-involving-weapons/index.html
@@ -40,7 +40,7 @@ title: "Knife crime in England and Wales"
                     <a class="breadcrumb__link" href="#">Home</a>
                   </li>
                   <li class="breadcrumb__item">
-                    <a class="breadcrumb__link" href="#">Crime in England and Wales</a>
+                    <a class="breadcrumb__link" href="#">Offences involving weapons in England and Wales</a>
                   </li>
                 </ol>
               </div>
