--- a/sprint/25/crime-overview/index.html
+++ b/sprint/25/crime-overview/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: false
-title: "Knife crime in England and Wales"
+title: "Crime in England and Wales"
 ---
 <style>
 .sticky {
@@ -82,7 +82,7 @@ title: "Knife crime in England and Wales"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <p class="padding-top--3">Part of <a href="" style="color:#fff">Crime in England and Wales</a><br />
+          <!-- <p class="padding-top--3">Part of <a href="" style="color:#fff">Crime in England and Wales</a><br /> -->
             Released on 28 April 2018
             </p>
         </div>
@@ -287,7 +287,7 @@ title: "Knife crime in England and Wales"
 
               <p><a href="#section-1">Back to top</a></p>
 
-            <h2 id="section-5">Analysis</h2>
+            <!-- <h2 id="section-5">Analysis</h2>
           <br>
 
           <div class="flex-grid">
@@ -304,7 +304,7 @@ title: "Knife crime in England and Wales"
 
           </div>
 
-          <p><a href="#section-1">Back to top</a></p>
+          <p><a href="#section-1">Back to top</a></p> -->
 
 
           <!-- <h2>Table</h2>
