Added medium snapshots

--- a/sprint/25/homicide/index.html
+++ b/sprint/25/homicide/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: false
-title: "Knife crime in England and Wales"
+title: "Homicide in England and Wales"
 ---
 <style>
 .sticky {
@@ -40,7 +40,10 @@ title: "Knife crime in England and Wales"
                     <a class="breadcrumb__link" href="#">Home</a>
                   </li>
                   <li class="breadcrumb__item">
-                    <a class="breadcrumb__link" href="#">Homicide in England and Wales</a>
+                    <a class="breadcrumb__link" href="#">Bulletins</a>
+                  </li>
+                  <li class="breadcrumb__item">
+                    Homicide in England and Wales
                   </li>
                 </ol>
               </div>
@@ -82,9 +85,13 @@ title: "Knife crime in England and Wales"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <p class="padding-top--3">Part of <a href="" style="color:#fff">Crime in England and Wales</a><br />
-            Released on 28 April 2018
-            </p>
+            <p class="padding-top--3">
+                <!-- Part of <a href="" style="color:#fff">Crime in England and Wales</a> -->
+                <!-- <br /> -->
+                Released on 26 April 2018 
+                <br />
+                Next release: 19 July 2018 (provisional)
+                </p>
         </div>
       </div>
     </div>
@@ -287,7 +294,7 @@ title: "Knife crime in England and Wales"
 
               <p><a href="#section-1">Back to top</a></p>
 
-            <h2 id="section-5">Analysis</h2>
+            <!-- <h2 id="section-5">Analysis</h2>
           <br>
 
           <div class="flex-grid">
@@ -304,7 +311,7 @@ title: "Knife crime in England and Wales"
 
           </div>
 
-          <p><a href="#section-1">Back to top</a></p>
+          <p><a href="#section-1">Back to top</a></p> -->
 
 
           <!-- <h2>Table</h2>
