--- a/sprint/25/index.html
+++ b/sprint/25/index.html
@@ -304,6 +304,53 @@ title: "Knife crime in England and Wales"
 
           </div>
 
+
+          <div class="flex-grid">
+
+            <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
+              <h3 class="heading-small padding-top--0 margin-top--1 margin-bottom--0">
+                Medium snapshot
+              </h3>
+              <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">The nature of violent crime in England and Wales: year ending March 2017</a></h3>
+                <div class="background--astral" style="border:0px solid white; padding:4px 8px 8px 8px; margin-bottom:16px;">
+                    <p class="heading-small font-weight--bold">Police recorded knife crime has been rising for the past 3 years</p>
+                    <img style="width:100%" src="{{ "/assets/img/spark.png" | relative_url }}" class="" alt="">
+              <!-- <p><span class="font-large font-weight--bold">37,443</span> </br>offences involving a knife or sharp instrument</p> -->
+                </div>
+                <p class="margin-top--1">A summary of violent crime from the year ending March 2017 Crime Survey for England and Wales and police recorded crime.</p>
+                <p class="font-xxsmall">This an example of small print.</p>
+            </div>
+
+            <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
+              <h3 class="heading-small padding-top--0 margin-top--1 margin-bottom--0">
+                Medium snapshot
+              </h3>
+              <h3 class="margin-top--0"><a href="#">Offences involving firearms have increased</a></h3>
+              <p class="margin-top--1 margin-bottom--1"><span class="font-xlarge font-weight--bold">11%</span> </br>increase since last year</p>
+
+              <p class="margin-top--2">An article covering public perceptions of crime and worry about crime at both the national and local level, using data from the Crime Survey for England and Wales (CSEW).</p>
+
+              <p class="font-xxsmall">This an example of small print.</p>
+            </div>
+          </div>
+
+          <div class="flex-grid">
+
+            <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
+              <h3 class="heading-small padding-top--0 margin-top--1 margin-bottom--0">
+                Medium snapshot
+              </h3>
+              <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">The nature of violent crime in England and Wales: year ending March 2017</a></h3>
+                <div class="background--astral" style="border:0px solid white; padding:4px 8px 8px 8px; margin-bottom:16px;">
+                    <p class="heading-small font-weight--bold">Police recorded knife crime has been rising for the past 3 years</p>
+                    <img style="width:100%" src="{{ "/assets/img/spark.png" | relative_url }}" class="" alt="">
+              <!-- <p><span class="font-large font-weight--bold">37,443</span> </br>offences involving a knife or sharp instrument</p> -->
+                </div>
+                <p class="margin-top--1">A summary of violent crime from the year ending March 2017 Crime Survey for England and Wales and police recorded crime.</p>
+                <p class="font-xxsmall">This an example of small print.</p>
+            </div>
+          </div>
+
           <p><a href="#section-1">Back to top</a></p>
 
 
