--- a/sprint/25/crime-overview/index.html
+++ b/sprint/25/crime-overview/index.html
@@ -67,17 +67,17 @@ title: "Crime in England and Wales: year ending December 2017"
 
     <div class="wrapper">
       <div class="col-wrap">
-        <div class="col col--md-half col--lg-half">
-          <div style="border:1px solid white; padding:8px 32px 16px 32px;">
+        <div class="col col--md-two-thirds col--lg-two-thirds">
+          <div style="border:1px solid white; background-color: white; padding:8px 32px 16px 32px;">
 
 
-            <p class="heading-medium font-weight--bold">While crime has fallen over the long-term, the short-term picture is more stable</p>
-            <img style="width:100%" src="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/cca0b1f9"
+            <p class="heading-medium font-weight--bold" style="color: #323132 ">While crime has fallen over the long-term, the short-term picture is more stable</p>
+            <img style="width:100%" src="crime_curvey_chart.png"
               class="" alt="">
             <!-- <p><span class="font-large font-weight--bold">37,443</span> </br>offences involving a knife or sharp instrument</p> -->
           </div>
         </div>
-        <div class="col col--md-one-quarter col--lg-half padding-left-md--5">
+        <div class="col col--md-one-third col--lg-one-third padding-left-md--5">
           <p>A fall in crime estimated by the Crime Survey for England and Wales (CSEW) was mainly driven by a 28% decrease
             in computer misuse offences</p>
           <p>Police recorded crime data shows a a 22% increase in offences involving knives or other sharp instruments and a
