--- a/sprint/25/index.html
+++ b/sprint/25/index.html
@@ -293,43 +293,25 @@ title: "Knife crime in England and Wales"
           <div class="flex-grid">
 
             <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-              <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">The nature of violent crime in England and Wales: year ending March 2017</a></h3>
-              <p class="margin-top--0">A summary of violent crime from the year ending March 2017 Crime Survey for England and Wales and police recorded crime.</p>
+              <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">Crime in England and Wales</a></h3>
+              <h4>While crime has fallen over the long-term, the short-term picture is more stable</h4>
+              <div style="border:1px solid white; padding:8px 16px 8px 16px; margin-bottom:16px; background-color:white;">
+                <img style="width:100%" src="crime-overview/crime_curvey_chart.png" class="" alt="">
+              </div>
+              <details role="group" class="margin-bottom--4 margin-top--1">
+              <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+                <span class="summary" style="font-size:18px;">This is more information<span class="visuallyhidden">
+                </span></summary>
+              <div class="panel" id="details-content-1" aria-hidden="false">
+              <p class="margin-top--0">The way crime is recorded has improved in recent years, which may partly contribute to the recent increases. However, there also appears to be a real rise in the number of these types of crime.</p>
+              </div>
+              </details>
             </div>
 
             <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-              <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/publicperceptionsofcrimeinenglandandwales/yearendingmarch2016">Public perceptions of crime in England and Wales: year ending March 2016</a></h3>
-              <p class="margin-top--0">An article covering public perceptions of crime and worry about crime at both the national and local level, using data from the Crime Survey for England and Wales (CSEW).</p>
-            </div>
-
-          </div>
-
-
-          <div class="flex-grid">
-
-            <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-              <h3 class="heading-small padding-top--0 margin-top--1 margin-bottom--0">
-                Medium snapshot
-              </h3>
-              <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">The nature of violent crime in England and Wales: year ending March 2017</a></h3>
-                <div class="background--astral" style="border:0px solid white; padding:4px 8px 8px 8px; margin-bottom:16px;">
-                    <p class="heading-small font-weight--bold">Police recorded knife crime has been rising for the past 3 years</p>
-                    <img style="width:100%" src="{{ "/assets/img/spark.png" | relative_url }}" class="" alt="">
-              <!-- <p><span class="font-large font-weight--bold">37,443</span> </br>offences involving a knife or sharp instrument</p> -->
-                </div>
-                <p class="margin-top--1">A summary of violent crime from the year ending March 2017 Crime Survey for England and Wales and police recorded crime.</p>
-                <p class="font-xxsmall">This an example of small print.</p>
-            </div>
-
-            <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-              <h3 class="heading-small padding-top--0 margin-top--1 margin-bottom--0">
-                Medium snapshot
-              </h3>
-              <h3 class="margin-top--0"><a href="#">Offences involving firearms have increased</a></h3>
-              <p class="margin-top--1 margin-bottom--1"><span class="font-xlarge font-weight--bold">11%</span> </br>increase since last year</p>
-
-              <p class="margin-top--2">An article covering public perceptions of crime and worry about crime at both the national and local level, using data from the Crime Survey for England and Wales (CSEW).</p>
-
+              <h3 class="margin-top--0"><a href="#">Homicide in England and Wales</a></h3>
+              <h4>The number of homicides has been impacted by recent terrorist attacks</h4>
+              <p class="font-large margin-bottom--2">Homicides recorded by the police fall 1% to 688</p>
               <p class="font-xxsmall">This an example of small print.</p>
             </div>
           </div>
@@ -337,17 +319,17 @@ title: "Knife crime in England and Wales"
           <div class="flex-grid">
 
             <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-              <h3 class="heading-small padding-top--0 margin-top--1 margin-bottom--0">
-                Medium snapshot
-              </h3>
-              <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">The nature of violent crime in England and Wales: year ending March 2017</a></h3>
-                <div class="background--astral" style="border:0px solid white; padding:4px 8px 8px 8px; margin-bottom:16px;">
-                    <p class="heading-small font-weight--bold">Police recorded knife crime has been rising for the past 3 years</p>
-                    <img style="width:100%" src="{{ "/assets/img/spark.png" | relative_url }}" class="" alt="">
-              <!-- <p><span class="font-large font-weight--bold">37,443</span> </br>offences involving a knife or sharp instrument</p> -->
-                </div>
-                <p class="margin-top--1">A summary of violent crime from the year ending March 2017 Crime Survey for England and Wales and police recorded crime.</p>
-                <p class="font-xxsmall">This an example of small print.</p>
+              <h3 class="margin-top--0"><a href="#">Weapons Crime in England and Wales</a></h3>
+              <h4>Police recorded more crimes involving weapons, with knife crime in cities rising most</h4>
+              <div style="border:1px solid white; padding:8px 16px 8px 16px; background-color:white;">
+                <img style="width:100%" src="crime-overview/crime_curvey_chart.png" class="" alt="">
+              </div>
+              <p class="font-xxsmall margin-top--2">This is an example of small print.</p>
+            </div>
+
+            <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
+              <h3 class="margin-top--0"><a href="#">Dont use this box it's a palceholder</a></h3>
+              <p class="margin-top--2">Placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text.</p>
             </div>
           </div>
 
