--- a/sprint/25/crime-overview/index.html
+++ b/sprint/25/crime-overview/index.html
@@ -191,116 +191,9 @@ title: "Crime in England and Wales: year ending December 2017"
           </details>
 
           <h2 id="section-2">Data</h2>
-          <br>
 
-          <div class="js-show-hide">
+          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View related data</a></p>
 
-            <div class="show-hide show-hide--light background--gallery margin-bottom--2">
-              <div class="js-show-hide__title ">
-                <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1">
-                  Geography
-                </h3>
-              </div>
-              <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
-                <p>Data is available at national level and by police area, reflecting the territorial police forces in the United
-                  Kingdom.
-                  <div class="background--astral padding-top-sm--2 padding-top-md--1 padding-right-sm--1 padding-right-md--1 padding-bottom-sm--2 padding-bottom-md--2 padding-left-sm--1 padding-left-md--1 js-mobile-filters__contents"
-                    style="margin:10px">
-                    <h4>Offences involving weapons</h4>
-                    <div class="filters__field">
-                      <span>
-                        <strong>View figure for</strong>
-                        <select onchange="getFigure(this.value)">
-                          <option disabled="true" selected value=""> --- select Police force area --- </option>
-                          <option value="Avon and Somerset">Avon and Somerset</option>
-                          <option value="Bedfordshire">Bedfordshire</option>
-                          <option value="Cambridgeshire">Cambridgeshire</option>
-                          <option value="Cheshire">Cheshire</option>
-                          <option value="Cleveland">Cleveland</option>
-                          <option value="Cumbria">Cumbria</option>
-                          <option value="Derbyshire">Derbyshire</option>
-                          <option value="Devon and Cornwall">Devon and Cornwall</option>
-                          <option value="Dorset">Dorset</option>
-                          <option value="Durham">Durham</option>
-                          <option value="Dyfed-Powys">Dyfed-Powys</option>
-                          <option value="Essex">Essex</option>
-                          <option value="Gloucestershire">Gloucestershire</option>
-                          <option value="Greater Manchester">Greater Manchester</option>
-                          <option value="Gwent">Gwent</option>
-                          <option value="Hampshire">Hampshire</option>
-                          <option value="Hertfordshire">Hertfordshire</option>
-                          <option value="Humberside">Humberside</option>
-                          <option value="Kent">Kent</option>
-                          <option value="Lancashire">Lancashire</option>
-                          <option value="Leicestershire">Leicestershire</option>
-                          <option value="Lincolnshire">Lincolnshire</option>
-                          <option value="London, City of">London, City of</option>
-                          <option value="Merseyside">Merseyside</option>
-                          <option value="Norfolk">Norfolk</option>
-                          <option value="North Wales">North Wales</option>
-                          <option value="North Yorkshire">North Yorkshire</option>
-                          <option value="Northamptonshire">Northamptonshire</option>
-                          <option value="Northumbria">Northumbria</option>
-                          <option value="Nottinghamshire">Nottinghamshire</option>
-                          <option value="South Wales">South Wales</option>
-                          <option value="South Yorkshire">South Yorkshire</option>
-                          <option value="Staffordshire">Staffordshire</option>
-                          <option value="Suffolk">Suffolk</option>
-                          <option value="Surrey">Surrey</option>
-                          <option value="Sussex">Sussex</option>
-                          <option value="Thames Valley">Thames Valley</option>
-                          <option value="Warwickshire">Warwickshire</option>
-                          <option value="West Mercia">West Mercia</option>
-                          <option value="West Midlands">West Midlands</option>
-                          <option value="West Yorkshire">West Yorkshire</option>
-                          <option value="Wiltshire">Wiltshire</option>
-                        </select>
-                      </span>
-                      <div id="answer"></div>
-                    </div>
-                  </div>
-                </p>
-              </div>
-            </div>
-
-            <div class="js-show-hide">
-
-              <div class="show-hide show-hide--light background--gallery margin-bottom--2">
-                <div class="js-show-hide__title ">
-                  <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1">
-                    Weapons offences
-                  </h3>
-                </div>
-                <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
-                  <p>Data is available on the following types of weapons offences:
-                    <br> Homicide
-                    <span class="font-color--iron">|</span> Attempted murder
-                    <span class="font-color--iron">|</span> Threats to kill
-                    <span class="font-color--iron">|</span> Assault with injury and assault with intent to cause serious harm
-                    <span class="font-color--iron">|</span> Robbery
-                    <span class="font-color--iron">|</span> Rape
-                    <span class="font-color--iron">|</span> Sexual assault</p>
-
-                </div>
-              </div>
-
-            </div>
-
-            <div class="js-show-hide">
-
-              <div class="show-hide show-hide--light background--gallery margin-bottom--2">
-                <div class="js-show-hide__title ">
-                  <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1">
-                    Time period
-                  </h3>
-                </div>
-                <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
-                  <p>2017-18 Quarter 1 (January to March)
-                    <span class="font-color--iron">|</span> 2017-18 Q2 (April to June)</p>
-                </div>
-              </div>
-
-            </div>
 
             <p>
               <a href="#section-1">Back to top</a>
