--- a/sprint/25/index.html
+++ b/sprint/25/index.html
@@ -295,15 +295,15 @@ title: "Knife crime in England and Wales"
             <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
               <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">Crime in England and Wales</a></h3>
               <h4>While crime has fallen over the long-term, the short-term picture is more stable</h4>
-              <div style="border:1px solid white; padding:8px 16px 8px 16px; margin-bottom:16px; background-color:white;">
-                <img style="width:100%" src="crime-overview/crime_curvey_chart.png" class="" alt="">
+              <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 8px 16px; background-color:white;">
+                <img style="width:100%" src="../../assets/img/crime_curvey_chart.png" class="" alt="">
               </div>
-              <details role="group" class="margin-bottom--4 margin-top--1">
+              <details role="group" class="margin-bottom--2 margin-top--2">
               <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                <span class="summary" style="font-size:18px;">This is more information<span class="visuallyhidden">
+                <span class="summary" style="font-size:18px;">What do you need to know<span class="visuallyhidden">
                 </span></summary>
               <div class="panel" id="details-content-1" aria-hidden="false">
-              <p class="margin-top--0">The way crime is recorded has improved in recent years, which may partly contribute to the recent increases. However, there also appears to be a real rise in the number of these types of crime.</p>
+              <p class="margin-top--0 margin-bottom--1">As measured by the Crime Survey of England and Wales</p>
               </div>
               </details>
             </div>
@@ -312,7 +312,14 @@ title: "Knife crime in England and Wales"
               <h3 class="margin-top--0"><a href="#">Homicide in England and Wales</a></h3>
               <h4>The number of homicides has been impacted by recent terrorist attacks</h4>
               <p class="font-large margin-bottom--2">Homicides recorded by the police fall 1% to 688</p>
-              <p class="font-xxsmall">This an example of small print.</p>
+              <details role="group" class="margin-bottom--2 margin-top--2">
+              <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+                <span class="summary" style="font-size:18px;">What do you need to know<span class="visuallyhidden">
+                </span></summary>
+              <div class="panel" id="details-content-1" aria-hidden="false">
+              <p class="margin-top--0 margin-bottom--1">These numbers are also affected by the 2017 Hillsborough verdict</p>
+              </div>
+              </details>
             </div>
           </div>
 
@@ -321,10 +328,17 @@ title: "Knife crime in England and Wales"
             <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
               <h3 class="margin-top--0"><a href="#">Weapons Crime in England and Wales</a></h3>
               <h4>Police recorded more crimes involving weapons, with knife crime in cities rising most</h4>
-              <div style="border:1px solid white; padding:8px 16px 8px 16px; background-color:white;">
-                <img style="width:100%" src="crime-overview/crime_curvey_chart.png" class="" alt="">
+              <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 16px 16px; background-color:white;">
+                <img style="width:100%" src="../../assets/img/crime_curvey_chart.png" class="" alt="">
               </div>
-              <p class="font-xxsmall margin-top--2">This is an example of small print.</p>
+              <details role="group" class="margin-bottom--2 margin-top--2">
+              <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+                <span class="summary" style="font-size:18px;">What do you need to know<span class="visuallyhidden">
+                </span></summary>
+              <div class="panel" id="details-content-1" aria-hidden="false">
+              <p class="margin-top--0 margin-bottom--1">Police recorded crime is not a national statistic</p>
+              </div>
+              </details>
             </div>
 
             <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
