--- a/sprint/25/weapons-crime/index.html
+++ b/sprint/25/weapons-crime/index.html
@@ -57,7 +57,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-top--2 padding-right--2 padding-bottom--3 padding-left--2">
             <p class="heading-small">Police recorded more crimes involving weapons, with knife crime in cities rising most</p>
-            <img style="width:100%" src="" class="" alt="">
+            <img style="width:100%" src="{{ "/assets/img/crime_curvey_chart.png" | relative_url }}" class="" alt="">
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
