--- a/sprint/25/crime-overview/index.html
+++ b/sprint/25/crime-overview/index.html
@@ -58,7 +58,7 @@ title: "Crime in England and Wales: year ending December 2017"
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-top--2 padding-right--2 padding-bottom--3 padding-left--2">
             <p class="heading-small">While crime has fallen over the long-term, the short-term picture is more stable</p>
-            <img style="width:100%" src="crime_curvey_chart.png" class="" alt="">
+            <img style="width:100%" src="{{ "/assets/img/crime_curvey_chart.png" | relative_url }}" class="" alt="">
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
@@ -236,7 +236,7 @@ title: "Crime in England and Wales: year ending December 2017"
               </div>
             </div>
 
-            
+
             <p>
               <a href="#section-1">Back to top</a>
             </p>
