Add content for twisty drop downs

--- a/sprint/25/weapons-crime/index.html
+++ b/sprint/25/weapons-crime/index.html
@@ -120,6 +120,32 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             </div>
           </details>
 
+          <details role="group" class="margin-bottom--4 margin-top--1">
+            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+              <span class="summary" style="font-size:18px;">Possession of a blade or point also rose
+            </summary>
+            <div class="panel" id="details-content-1" aria-hidden="false">
+              <p>Police recorded “possession of an article with a blade or point” offences also rose, by 33%, to 17,437 offences. This is consistent with increases seen over the last four years, and the highest figure since the series began in the year ending March 2009.</p>
+            </div>
+          </details>
+
+          <details role="group" class="margin-bottom--4 margin-top--1">
+            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+              <span class="summary" style="font-size:18px;">Firearm crimes have increased for the first time since 2005
+            </summary>
+            <div class="panel" id="details-content-1" aria-hidden="false">
+              <p>Offences involving firearms increased by 11% (to 6,604) in the year ending December 2017, compared with the previous year (5,945 offences).</p>
+              <p class="heading-small">Police recorded:</p>
+              <ul>
+                <li>a 12% increase in offences involving handguns (accounting for 46% of the overall increase)</li>
+                <li>a 21% increase in offences involving unidentified firearms</li>
+                <li>a 20% increase in offences involving shotguns</li>
+              </ul>
+              <p>NHS England hospital admissions data also shows increases firearm injuries. This rose from 109 admissions in the year ending March 2016 to 135 admissions in the year ending March 2017.</p>
+              <p>London’s Air Ambulance Data also suggest an increase in serious offences involving a weapon. In 2017, injuries resulting from stabbings and shootings were the most common cause for a helicopter to be dispatched.</p>
+            </div>
+          </details>
+
 
           <h2 id="section-2">Data</h2>
 
